--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -303,8 +303,9 @@
       </div>
       <!-- /.row -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>      
-<div><%= bar_chart @data %></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>    
+<% options = {width: 400, height:140 } %>
+<div><%= bar_chart @data, options %></div>
 
 
 
