--- a/app/views/layouts/manage/home.html.erb
+++ b/app/views/layouts/manage/home.html.erb
@@ -232,8 +232,8 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Alexander Pierce</span>
+              <img  class="user-image" alt="User Image"<%= image_tag @current_user.avatar.url %>
+              <span class="hidden-xs"><%= @current_user.full_name %></span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
