--- a/app/views/layouts/manage/home.html.erb
+++ b/app/views/layouts/manage/home.html.erb
@@ -15,9 +15,9 @@
     <!-- Logo -->
     <a href="../../index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>G</b>K</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b>LTE</span>
+      <span class="logo-lg"><b>GemKeK</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -238,35 +238,39 @@
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <%= image_tag @current_user.avatar.url, class: "img-circle", alt: "User Image"%>
 
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  <%= @current_user.full_name %> - Web Developer
+                  <small>Member since <%= @current_user.confirmed_at %></small>
                 </p>
               </li>
               <!-- Menu Body -->
-              <li class="user-body">
-                <div class="row">
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Followers</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Sales</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Friends</a>
-                  </div>
-                </div>
+<!--              <li class="user-body">-->
+<!--                <div class="row">-->
+<!--                  <div class="col-xs-4 text-center">-->
+<!--                    <a href="#">Followers</a>-->
+<!--                  </div>-->
+<!--                  <div class="col-xs-4 text-center">-->
+<!--                    <a href="#">Sales</a>-->
+<!--                  </div>-->
+<!--                  <div class="col-xs-4 text-center">-->
+<!--                    <a href="#">Friends</a>-->
+<!--                  </div>-->
+<!--                </div>-->
                 <!-- /.row -->
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <%= link_to user_profile_home_path(id: current_user.id), class: "btn btn-default btn-flat" do %>
+                    Profile
+                  <% end %>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <%= link_to destroy_user_session_path, class: "btn btn-default btn-flat", method: :delete do %>
+                    Sign Out
+                  <% end %>
                 </div>
               </li>
             </ul>
