--- a/app/views/manage/games/search_game.html.erb
+++ b/app/views/manage/games/search_game.html.erb
@@ -7,14 +7,15 @@
         <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p>Alexander Pierce</p>
+        <p>
+          <% current_user.full_name %></p>
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
     </div>
-    <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+    <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
       <div class="input-group">
           <span class="input-group-btn">
-          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
+          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
             <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
         </span>
       </div>
@@ -24,10 +25,8 @@
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
       <li>
-        <a>
-          <%= link_to manage_path, class: "fa fa-th" do %>
-            Report
-          <% end %>
+        <a href="#">
+          <i class="fa fa-th"></i> <span>Report</span>
         </a>
       </li>
       <li class="treeview active menu-open">
@@ -57,8 +56,7 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Data Tables
-      <small>advanced tables</small>
+      Game
     </h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -73,38 +71,75 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage User</strong></h3>
+            <h3 class="box-title"><strong>Manage Game</strong></h3>
+            <%= link_to "#", class: "btn btn-success",
+                        data: {
+                            toggle: "modal",
+                            url: new_manage_game_path(),
+                            target: "#game-form-edit"} do
+            %>
+              Add new
+            <% end %>
           </div>
+          <% flash.each do |key, value| %>
+            <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="user-table">
-              <table id="example1" class="table table-bordered table-striped">
-                <thead>
+            <table id="example1" class="table table-bordered table-striped">
+              <thead>
+              <tr>
+                <th>Name</th>
+                <th>Genere</th>
+                <th>Platform</th>
+                <th>Rating Score</th>
+                <th>Reviews</th>
+                <th>Action</th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @search_results.each do |game| %>
                 <tr>
-                  <th>Email</th>
-                  <th>Full_name</th>
-                  <th>Register date</th>
-                  <th>Reviews</th>
-                  <th>Comments</th>
-                  <th>Function</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @user = User.all %>
-                <%= render "manage/users/users_list", users: @user %>
-                </tbody>
-                <!--                <tfoot>-->
-                <!--                  <tr>-->
-                <!--                    <th>Email</th>-->
-                <!--                    <th>full_name</th>-->
-                <!--                    <th>register date</th>-->
-                <!--                    <th>number of reviews</th>-->
-                <!--                    <th>number of comment</th>-->
-                <!--                    <th>Function</th>-->
-                <!--                  </tr>-->
-                <!--                </tfoot>-->
+                  <td><%= link_to game_detail_path(:id => game.id) do %>
+                      <%= game.name %></td>
+                    <% end %>
+                    <td>
+                      <% game.genres_of_game.each_with_index do |genre, index| %>
+                        <%= index == 0 ? "" : "," %>
+                        <%= link_to game_game_list_of_genre_path(genre: genre.name) do %>
+                          <%= genre.name %>
+                        <% end %>
+                      <% end %>
+                    </td>
+                    <td>
+                      <% game.platform_of_game.each_with_index do |platform, index| %>
+                        <%= index == 0 ? "" : "," %>
+                        <%= link_to game_game_list_of_platform_path(platform: platform.name) do %>
+                          <%= platform.name %>
+                        <% end %>
+                      <% end %>
+                    </td>
+                    <td><%= get_rate_average(game) %></td>
+                    <td><%= game.reviews.count() %></td>
+                    <td>
+
+                      <%= link_to "#", class: "btn btn-info",
+                                  data: {
+                                      toggle: "modal",
+                                      url: edit_manage_game_path(game.id),
+                                      target: "#game-form-edit"} do
+                      %>
+                        Edit
+                      <% end %>
+                      <%= link_to "Delete", manage_game_path(game), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'} %>
+                    </td>
+
+                    </tr>
+              <% end %>
+
+              </tfoot>
               </table>
-            </div>
           </div>
           <!-- /.box-body -->
         </div>
@@ -112,9 +147,13 @@
         <!-- /.box -->
       </div>
       <!-- /.col -->
+
+
     </div>
     <!-- /.row -->
   </section>
+
+
   <!-- /.content -->
 </div>
 
@@ -307,4 +346,7 @@
   </div>
 </aside>
 <div class="control-sidebar-bg"></div>
-
+<div id="game-form-edit" class="modal fade">
+  <div class="modal-dialog modal-content">
+  </div>
+</div>
