--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -2,32 +2,34 @@
   <!-- sidebar: style can be found in sidebar.less -->
   <section class="sidebar">
     <!-- Sidebar user panel -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-      </div>
-      <div class="pull-left info">
-        <p>Alexander Pierce</p>
-        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-      </div>
-    </div>
-    <!-- search form -->
-    <form action="#" method="get" class="sidebar-form">
-      <div class="input-group">
-        <input type="text" name="q" class="form-control" placeholder="Search...">
-        <span class="input-group-btn">
-              <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-              </button>
-            </span>
-      </div>
-    </form>
+    <!--    <div class="user-panel">-->
+    <!--      <div class="pull-left image">-->
+    <!--        <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">-->
+    <!--      </div>-->
+    <!--      <div class="pull-left info">-->
+    <!--        <p>Alexander Pierce</p>-->
+    <!--        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--    <!-- search form -->
+    <!--    <form action="#" method="get" class="sidebar-form">-->
+    <!--      <div class="input-group">-->
+    <!--        <input type="text" name="q" class="form-control" placeholder="Search...">-->
+    <!--        <span class="input-group-btn">-->
+    <!--              <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>-->
+    <!--              </button>-->
+    <!--            </span>-->
+    <!--      </div>-->
+    <!--    </form>-->
     <!-- /.search form -->
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
       <li class="active">
-        <a href="#">
-          <i class="fa fa-th"></i> <span>Report</span>
+        <a>
+          <%= link_to manage_path, class: "fa fa-th" do %>
+            Report
+          <% end %>
         </a>
       </li>
       <li class="treeview menu-open">
@@ -39,10 +41,14 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a href="#"><i class="fa fa-circle-o"></i> Manage User</a></li>
-          <li><%=link_to manage_games_path do%>
+          <li><%= link_to manage_data_path do %>
+              <i class="fa fa-circle-o"></i> Manage User
+            <% end %>
+          </li>
+          <li><%= link_to manage_games_path do %>
               <i class="fa fa-circle-o"></i> Manage Game
-            <%end%>
+            <% end %>
+          </li>
         </ul>
       </li>
     </ul>
@@ -66,80 +72,85 @@
   <section class="content">
     <!-- Small boxes (Stat box) -->
     <div class="row">
-      <div class="col-lg-3 col-xs-6">
+      <div class="col-lg-4 col-xs-6">
         <!-- small box -->
         <div class="small-box bg-aqua">
           <div class="inner">
-            <h3>150</h3>
+            <h3>10 Games</h3>
 
-            <p>New Orders</p>
+            <p>On Top Reviews</p>
           </div>
           <div class="icon">
             <i class="ion ion-bag"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          <%= link_to manage_top_reviews_path class: "small-box-footer" do %>
+            More info <i class="fa fa-arrow-circle-right"></i>
+          <% end %>
         </div>
       </div>
       <!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
+      <div class="col-lg-4 col-xs-6">
         <!-- small box -->
         <div class="small-box bg-green">
           <div class="inner">
-            <h3>53<sup style="font-size: 20px">%</sup></h3>
+            <h3>50 Users<sup style="font-size: 20px"></sup></h3>
 
-            <p>Bounce Rate</p>
+            <p>Just Join Us</p>
           </div>
           <div class="icon">
             <i class="ion ion-stats-bars"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          <%= link_to manage_new_users_path class: "small-box-footer" do %>
+            More info <i class="fa fa-arrow-circle-right"></i>
+          <% end %>
+
+          <!--          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>-->
         </div>
       </div>
       <!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-yellow">
-          <div class="inner">
-            <h3>44</h3>
+      <!--      <div class="col-lg-3 col-xs-6">-->
+      <!--        <!-- small box -->
+      <!--        <div class="small-box bg-yellow">-->
+      <!--          <div class="inner">-->
+      <!--            <h3>44</h3>-->
 
-            <p>User Registrations</p>
-          </div>
-          <div class="icon">
-            <i class="ion ion-person-add"></i>
-          </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-        </div>
-      </div>
-      <!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-red">
-          <div class="inner">
-            <h3>65</h3>
+      <!--            <p>User Registrations</p>-->
+      <!--          </div>-->
+      <!--          <div class="icon">-->
+      <!--            <i class="ion ion-person-add"></i>-->
+      <!--          </div>-->
+      <!--          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>-->
+      <!--        </div>-->
+      <!--      </div>-->
+      <!--      <!-- ./col -->
+      <!--      <div class="col-lg-3 col-xs-6">-->
+      <!--        <!-- small box -->
+      <!--        <div class="small-box bg-red">-->
+      <!--          <div class="inner">-->
+      <!--            <h3>65</h3>-->
 
-            <p>Unique Visitors</p>
-          </div>
-          <div class="icon">
-            <i class="ion ion-pie-graph"></i>
-          </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-        </div>
-      </div>
-      
+      <!--            <p>Unique Visitors</p>-->
+      <!--          </div>-->
+      <!--          <div class="icon">-->
+      <!--            <i class="ion ion-pie-graph"></i>-->
+      <!--          </div>-->
+      <!--          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>-->
+      <!--        </div>-->
+      <!--      </div>-->
+
       <!-- /.row -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>    
-<% options = {width: 400, height:140 } %>
-<div><%= bar_chart @data, options %></div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
+      <% options = {width: 400, height: 140} %>
+      <div><%= bar_chart @data, options %></div>
 
-<!--       <!-- ./col -->
+      <!--       <!-- ./col -->
     </div>
     <!-- /.row -->
-<div><%= bar_chart @data %></div> -->
+    <!--    <div><%#= bar_chart @data %></div>-->
+    <!--    -->
 
-
-
-
+  </section>
   <!-- /.content-wrapper -->
 
   <!-- Control Sidebar -->
@@ -337,7 +348,7 @@
   <div class="control-sidebar-bg"></div>
 </div>
 <script>
-  $.widget.bridge('uibutton', $.ui.button);
+    $.widget.bridge('uibutton', $.ui.button);
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>      
 
