--- a/app/views/manage/home/new_user.html.erb
+++ b/app/views/manage/home/new_user.html.erb
@@ -73,38 +73,66 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage User</strong></h3>
+            <h3 class="box-title"><strong>Manage Game</strong></h3>
+            <%= link_to "#", class: "btn btn-success",
+                        data: {
+                            toggle: "modal",
+                            url: new_manage_game_path(),
+                            target: "#game-form-edit"} do
+            %>
+              Add new
+            <% end %>
           </div>
+          <% flash.each do |key, value| %>
+            <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="user-table">
-              <table id="example1" class="table table-bordered table-striped">
-                <thead>
-                <tr>
-                  <th>Email</th>
-                  <th>Full_name</th>
-                  <th>Register date</th>
-                  <th>Reviews</th>
-                  <th>Comments</th>
-                  <th>Function</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @user = User.all %>
-                <%= render "manage/users/users_list", users: @user %>
-                </tbody>
-                <!--                <tfoot>-->
-                <!--                  <tr>-->
-                <!--                    <th>Email</th>-->
-                <!--                    <th>full_name</th>-->
-                <!--                    <th>register date</th>-->
-                <!--                    <th>number of reviews</th>-->
-                <!--                    <th>number of comment</th>-->
-                <!--                    <th>Function</th>-->
-                <!--                  </tr>-->
-                <!--                </tfoot>-->
+            <table id="example1" class="table table-bordered table-striped">
+              <thead>
+              <tr>
+                <th>Email</th>
+                <th>Full_name</th>
+                <th>Register date</th>
+                <th>Reviews</th>
+                <th>Comments</th>
+                <th>Function</th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @new_users.each do |user| %>
+                <% if not user.is_admin %>
+                  <tr>
+                    <td><%= link_to user_profile_home_path(id: user.id) do %> <%= user.email %>
+                      <% end %> </td>
+                    <td><%= user.full_name %>
+                    </td>
+                    <td><%= user.created_at.to_date %></td>
+                    <td><%= user.reviews.count() %></td>
+                    <td><%= user.comments.count() %></td>
+                    <td>
+                      <% if not user.is_admin %>
+                        <%= render "manage/users/block", user: user %>
+                      <% end %>
+                    </td>
+                    <!--
+                      <% if user.is_blocked == false %>-->
+                      <!--<td><%= link_to manage_user_block_path(user.id), method: :get do %> block
+                        <% end %></td>-->
+                      <!--
+                      <% else %>-->
+                      <!--<td><%= link_to manage_user_unblock_path(user.id), method: :get do %> unblock
+                        <% end %></td>-->
+                      <!--
+                      <% end %>-->
+
+                  </tr>
+                <% end %>
+              <% end %>
+
+              </tfoot>
               </table>
-            </div>
           </div>
           <!-- /.box-body -->
         </div>
@@ -112,6 +140,8 @@
         <!-- /.box -->
       </div>
       <!-- /.col -->
+
+
     </div>
     <!-- /.row -->
   </section>
