--- a/app/views/manage/users/_block.html.erb
+++ b/app/views/manage/users/_block.html.erb
@@ -1,7 +1,7 @@
 <div id="block_<%= user.id %>">
 <% if user.is_blocked == false %>
-<%= link_to manage_user_block_path(user.id), method: :get, remote: true do %> block <% end %>
+<%= link_to manage_user_block_path(user.id), method: :get, class: "btn btn-danger",  remote: true do %> block <% end %>
 <% else %>
-<%= link_to manage_user_unblock_path(user.id), method: :get, remote: true do %> unblock <% end %>
+<%= link_to manage_user_unblock_path(user.id), method: :get, class: "btn btn-info", remote: true do %> unblock <% end %>
 <% end %>
 </div>
