--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -5,7 +5,7 @@
       <div class="col-md-9">
         <div class="col-md-12">
           <div class="col-xs-12 col-md-5">
-            <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
+            <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") %>
           </div>
           <div class="col-xs-12 col-md-7">
             <div class="about-text">
