--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -9,7 +9,7 @@
     <div class="carousel-inner" role="listbox">
       <% @game_upcoming.each.with_index do |game, index| %>
       <div class="item <%= index == 0 ? 'active' : '' %>">
-        <%= image_tag(game.photos.first.image, :alt => "First Slide") %>
+        <%= image_tag(game.photos.first.image_url, :alt => "First Slide") %>
         <div class="carousel-caption">
           <h2><%= game.name %></h2>
           <h1><%= game.relase_date.to_date %></h1>
@@ -41,7 +41,7 @@
             <div class="owl-carousel new-game">
               <% @game_news.each do |game| %>
               <div class="container-top-game">
-                <%= image_tag(game.photos.last.image, :class => "img-responsive image") %>
+                <%= image_tag(game.photos.last.image_url, :class => "img-responsive image") %>
                 <div class="overlay">
                 <%=link_to game_detail_path(id: game.id) do %>
                   <div class="text"><%= game.name %>
@@ -61,7 +61,7 @@
           <% @game_top.each do |game| %>
           <div class="col-md-12 fix-pading-content">
             <div class="col-xs-12 col-md-4">
-              <%=link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image, :class => "img-responsive fix-box-img-top-game") %><%end%>
+              <%=link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game") %><%end%>
             </div>
             <div class="col-xs-12 col-md-8 content-game-home-page">
               <div class="about-text col-md-12">
