--- a/app/views/manage/games/_form.html.erb
+++ b/app/views/manage/games/_form.html.erb
@@ -11,6 +11,7 @@
         </div>
        
       </div>
+       
        <div class="col-md-12">
         <div class="form-group">
           <%= f.label :genres_of_game_ids, "Genre"%>
@@ -29,8 +30,22 @@
          <%= f.text_area :summary, class:'form-control', rows:'5'%>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="form-group">
+           <%= f.file_field :images, multiple: true, id: "game_photos", name: "game_photos[photo][]", class: "upload-image" %>
+        </div>   
+      </div>
+           
   </div>
-     
+  <div style="margin-left: 15px;"> 
+     <% @game.photos.each do |p| %>
+      <% unless p.image_url.nil? %>
+       <%=image_tag p.image_url, style: "max-width: 200px; max-height: 200px"%>
+      <% end %>
+ 
+      <%end%>
+  </div>
+  
   <div class="modal-footer">
     <%= f.submit @game.name.nil? ? "Create" : "Update" , class:'btn btn-default' %> 
   </div>
@@ -42,4 +57,56 @@
 
    $('#platform_game_ids').select2({
     });
+
+
+(function() {
+  var multiPhotoDisplay;
+
+  $('#game_photos').on('change', function(e) {
+    console.log("thangtqtttt");
+    return multiPhotoDisplay(this);
+  });
+
+  this.readURL = function(input) {
+    var reader;
+    if (input.files && input.files[0]) {
+      reader = new FileReader();
+      reader.onload = function(e) {
+        var $preview;
+        $('.image_to_upload').attr('src', e.target.result);
+        $preview = $('.preview');
+        if ($preview.hasClass('hide')) {
+          return $preview.toggleClass('hide');
+        }
+      };
+      return reader.readAsDataURL(input.files[0]);
+    }
+  };
+
+  multiPhotoDisplay = function(input) {
+    var file, reader, _i, _len, _ref;
+    if (input.files && input.files[0]) {
+      _ref = input.files;
+      for (_i = 0, _len = _ref.length; _i < _len; _i++) {
+        file = _ref[_i];
+        reader = new FileReader();
+        reader.onload = function(e) {
+          var image_html;
+          image_html = "<li><a class=\"th\" href=\"" + e.target.result + "\"><img width=\"75\" src=\"" + e.target.result + "\"></a></li>";
+          $('#photos_clearing').append(image_html);
+          if ($('.pics-label.hide').length !== 0) {
+            $('.pics-label').toggle('hide').removeClass('hide');
+          }
+          return $(document).foundation('reflow');
+        };
+        reader.readAsDataURL(file);
+      }
+      window.post_files = input.files;
+      if (window.post_files !== void 0) {
+        return input.files = $.merge(window.post_files, input.files);
+      }
+    }
+  };
+
+}).call(this);
  </script>>
