--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -135,7 +135,7 @@
 <!--       <!-- ./col -->
     </div>
     <!-- /.row -->
-<div><%= bar_chart @data %></div> -->
+<div><%= bar_chart @data %></div> 
 
 
 
