--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -13,7 +13,7 @@
         <div class="col-md-12">
           <div class="col-xs-12 col-md-4">
             <%= link_to game_detail_path(id: @review.game_id) do %>
-              <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
+              <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") %>
             <% end %>
           </div>
           <div class="col-xs-12 col-md-8">
