--- a/app/views/user_profile/home.html.erb
+++ b/app/views/user_profile/home.html.erb
@@ -35,6 +35,14 @@
                                 <h1 class="panel-title pull-left" style="font-size:30px;"><%=@user.full_name%> <small><%= @user.email%></small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
                             </span>
                             <br><br><hr>
+                            <%= link_to "#",
+                                data: {
+                                toggle: "modal",
+                                url: edit_manage_user_path(@user),
+                                target: "#user-form-edit"} do %>
+                                <i class="fa fa-pencil-square-o fa-lg"></i>
+                                Edit
+                                <% end %>
                         </div>
                     </div>
                     <hr>
@@ -212,5 +220,12 @@
     <div class="modal-body"></div>
   </div>
 </div>
-
-
+<div id="user-form-edit" class="modal fade">
+  <div class="modal-dialog modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>Update user</h3>
+    </div>
+    <div class="modal-body"></div>
+  </div>
+</div>
