--- a/app/views/manage/games/index.html.erb
+++ b/app/views/manage/games/index.html.erb
@@ -2,28 +2,26 @@
   <!-- sidebar: style can be found in sidebar.less -->
   <section class="sidebar">
     <!-- Sidebar user panel -->
-    <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
-      <div class="input-group">
-          <span class="input-group-btn">
-          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
-            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
-        </span>
-      </div>
-    <% end %>
     <!-- /.search form -->
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
+      <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
+        <div class="input-group">
+          <span class="input-group-btn">
+          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
+            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
+        </span>
+        </div>
+      <% end %>
       <li>
+        <%= link_to manage_path do %>
+        <li class="active">
+          <i class="fa fa-th"></i>
+          <span>Report</span>
 
-<!--        <a href="#">-->
-<!--          <i class="fa fa-th"></i> <span>Report</span>-->
-<!--        </a>-->
-        <a>
-          <%= link_to manage_path, class: "fa fa-th" do %>
-            Report
-          <% end %>
-        </a>
+        </li>
+        <% end %>
       </li>
       <li class="treeview active menu-open">
         <a href="#">
@@ -48,14 +46,14 @@
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
-    <h1>
-      GAME TABLE
-    </h1>
-    <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol>
+<!--    <h1>-->
+<!--      GAME TABLE-->
+<!--    </h1>-->
+<!--    <ol class="breadcrumb">-->
+<!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+<!--      <li><a href="#">Tables</a></li>-->
+<!--      <li class="active">Data tables</li>-->
+<!--    </ol>-->
   </section>
 
   <!-- Main content -->
@@ -64,8 +62,8 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage Game</strong></h3>
-            <%= link_to "#", class: "btn btn-success",
+            <h3 class="box-title"><strong>GAME TABLE</strong></h3>
+            <%= link_to "#", class: "btn btn-success pull-right",
                         data: {
                             toggle: "modal",
                             url: new_manage_game_path(),
