--- a/app/views/manage/games/search_game.html.erb
+++ b/app/views/manage/games/search_game.html.erb
@@ -2,7 +2,7 @@
   <!-- sidebar: style can be found in sidebar.less -->
   <section class="sidebar">
     <!-- Sidebar user panel -->
-<!--     <div class="user-panel">
+    <!--     <div class="user-panel">
       <div class="pull-left image">
         <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
       </div>
@@ -12,24 +12,26 @@
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
     </div> -->
-    <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
-      <div class="input-group">
-          <span class="input-group-btn">
-          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
-            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
-        </span>
-      </div>
-    <% end %>
     <!-- /.search form -->
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
+      <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
+        <div class="input-group">
+          <span class="input-group-btn">
+          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
+            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
+        </span>
+        </div>
+      <% end %>
       <li>
-        <a>
-          <%= link_to manage_path, class: "fa fa-th" do %>
-            Report
-          <% end %>
-        </a>
+        <%= link_to manage_path do %>
+        <li class="active">
+          <i class="fa fa-th"></i>
+          <span>Report</span>
+
+        </li>
+        <% end %>
       </li>
       <li class="treeview menu-open">
         <a href="#">
@@ -53,16 +55,16 @@
 </aside>
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
-      Game Search
-    </h1>
-    <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol>
-  </section>
+  <!--  <section class="content-header">-->
+  <!--    <h1>-->
+  <!--      Game Search-->
+  <!--    </h1>-->
+  <!--    <ol class="breadcrumb">-->
+  <!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+  <!--      <li><a href="#">Tables</a></li>-->
+  <!--      <li class="active">Data tables</li>-->
+  <!--    </ol>-->
+  <!--  </section>-->
 
   <!-- Main content -->
   <section class="content">
@@ -70,15 +72,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage Game</strong></h3>
-            <%= link_to "#", class: "btn btn-success",
-                        data: {
-                            toggle: "modal",
-                            url: new_manage_game_path(),
-                            target: "#game-form-edit"} do
-            %>
-              Add new
-            <% end %>
+            <h3 class="box-title"><strong>Search Results</strong></h3>
           </div>
           <% flash.each do |key, value| %>
             <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
