--- a/app/views/manage/home/new_user.html.erb
+++ b/app/views/manage/home/new_user.html.erb
@@ -2,24 +2,26 @@
   <!-- sidebar: style can be found in sidebar.less -->
   <section class="sidebar">
     <!-- Sidebar user panel -->
-    <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
-      <div class="input-group">
-          <span class="input-group-btn">
-          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
-            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
-        </span>
-      </div>
-    <% end %>
     <!-- /.search form -->
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
+      <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+        <div class="input-group">
+          <span class="input-group-btn">
+          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
+            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
+        </span>
+        </div>
+      <% end %>
       <li>
-        <a>
-          <%= link_to manage_path, class: "fa fa-th" do %>
-            Report
-          <% end %>
-        </a>
+        <%= link_to manage_path do %>
+        <li class="active">
+          <i class="fa fa-th"></i>
+          <span>Report</span>
+
+        </li>
+      <% end %>
       </li>
       <li class="treeview active menu-open">
         <a href="#">
@@ -43,16 +45,16 @@
 </aside>
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
-      USER TABLE
-    </h1>
- <!--    <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol> -->
-  </section>
+<!--  <section class="content-header">-->
+<!--    <h1>-->
+<!--      USER TABLE-->
+<!--    </h1>-->
+<!-- <!--    <ol class="breadcrumb">-->
+<!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+<!--      <li><a href="#">Tables</a></li>-->
+<!--      <li class="active">Data tables</li>-->
+<!--    </ol> -->
+<!--  </section>-->
 
   <!-- Main content -->
   <section class="content">
@@ -60,15 +62,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage Game</strong></h3>
-            <%= link_to "#", class: "btn btn-success",
-                        data: {
-                            toggle: "modal",
-                            url: new_manage_game_path(),
-                            target: "#game-form-edit"} do
-            %>
-              Add new
-            <% end %>
+            <h3 class="box-title"><strong>NEW USERS</strong></h3>
           </div>
           <% flash.each do |key, value| %>
             <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
@@ -84,7 +78,6 @@
                 <th>Register date</th>
                 <th>Reviews</th>
                 <th>Comments</th>
-                <th>Function</th>
               </tr>
               </thead>
               <tbody>
@@ -98,21 +91,6 @@
                     <td><%= user.created_at.to_date %></td>
                     <td><%= user.reviews.count() %></td>
                     <td><%= user.comments.count() %></td>
-                    <td>
-                      <% if not user.is_admin %>
-                        <%= render "manage/users/block", user: user %>
-                      <% end %>
-                    </td>
-                    <!--
-                      <% if user.is_blocked == false %>-->
-                      <!--<td><%= link_to manage_user_block_path(user.id), method: :get do %> block
-                        <% end %></td>-->
-                      <!--
-                      <% else %>-->
-                      <!--<td><%= link_to manage_user_unblock_path(user.id), method: :get do %> unblock
-                        <% end %></td>-->
-                      <!--
-                      <% end %>-->
 
                   </tr>
                 <% end %>
