--- a/app/views/manage/home/top_review.html.erb
+++ b/app/views/manage/home/top_review.html.erb
@@ -2,33 +2,35 @@
   <!-- sidebar: style can be found in sidebar.less -->
   <section class="sidebar">
     <!-- Sidebar user panel -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-      </div>
-      <div class="pull-left info">
-        <p>Alexander Pierce</p>
-        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-      </div>
-    </div>
-    <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
-      <div class="input-group">
-          <span class="input-group-btn">
-          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
-            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
-        </span>
-      </div>
-    <% end %>
+<!--    <div class="user-panel">-->
+<!--      <div class="pull-left image">-->
+<!--        <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">-->
+<!--      </div>-->
+<!--      <div class="pull-left info">-->
+<!--        <p>Alexander Pierce</p>-->
+<!--        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>-->
+<!--      </div>-->
+<!--    </div>-->
     <!-- /.search form -->
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
+      <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+        <div class="input-group">
+          <span class="input-group-btn">
+          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
+            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
+        </span>
+        </div>
+      <% end %>
       <li>
-        <a>
-          <%= link_to manage_path, class: "fa fa-th" do %>
-            Report
-          <% end %>
-        </a>
+        <%= link_to manage_path do %>
+        <li class="active">
+          <i class="fa fa-th"></i>
+          <span>Report</span>
+
+        </li>
+      <% end %>
       </li>
       <li class="treeview active menu-open">
         <a href="#">
@@ -52,17 +54,17 @@
 </aside>
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
-      Data Tables
-      <small>advanced tables</small>
-    </h1>
-    <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol>
-  </section>
+<!--  <section class="content-header">-->
+<!--    <h1>-->
+<!--      Data Tables-->
+<!--      <small>advanced tables</small>-->
+<!--    </h1>-->
+<!--    <ol class="breadcrumb">-->
+<!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+<!--      <li><a href="#">Tables</a></li>-->
+<!--      <li class="active">Data tables</li>-->
+<!--    </ol>-->
+<!--  </section>-->
 
   <!-- Main content -->
   <section class="content">
@@ -70,15 +72,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage Game</strong></h3>
-            <%= link_to "#", class: "btn btn-success",
-                        data: {
-                            toggle: "modal",
-                            url: new_manage_game_path(),
-                            target: "#game-form-edit"} do
-            %>
-              Add new
-            <% end %>
+            <h3 class="box-title"><strong>Top Review Games</strong></h3>
           </div>
           <% flash.each do |key, value| %>
             <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
