--- a/app/views/manage/users/search_user.html.erb
+++ b/app/views/manage/users/search_user.html.erb
@@ -22,25 +22,27 @@
     <!--            </div>-->
     <!--          </form>-->
 
-    <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
-      <div class="input-group">
+    <!-- /.search form -->
+    <!-- sidebar menu: : style can be found in sidebar.less -->
+    <ul class="sidebar-menu" data-widget="tree">
+      <li class="header">MAIN NAVIGATION</li>
+      <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+        <div class="input-group">
           <span class="input-group-btn">
           <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
             <%= submit_tag id: "search-btn", class: 'btn btn-flat' %>
             <i class="fa fa-search"></i>
         </span>
-      </div>
-    <% end %>
-    <!-- /.search form -->
-    <!-- sidebar menu: : style can be found in sidebar.less -->
-    <ul class="sidebar-menu" data-widget="tree">
-      <li class="header">MAIN NAVIGATION</li>
+        </div>
+      <% end %>
       <li>
-        <a>
-          <%= link_to manage_path, class: "fa fa-th" do %>
-            Report
-          <% end %>
-        </a>
+        <%= link_to manage_path do %>
+        <li class="active">
+          <i class="fa fa-th"></i>
+          <span>Report</span>
+
+        </li>
+      <% end %>
       </li>
       <li class="treeview active menu-open">
         <a href="#">
@@ -65,16 +67,16 @@
 
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
-      USER TABLE
-    </h1>
-<!--     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol> -->
-  </section>
+<!--  <section class="content-header">-->
+<!--    <h1>-->
+<!--      USER TABLE-->
+<!--    </h1>-->
+<!--     <ol class="breadcrumb">-->
+<!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+<!--      <li><a href="#">Tables</a></li>-->
+<!--      <li class="active">Data tables</li>-->
+<!--    </ol> -->
+<!--  </section>-->
 
   <!-- Main content -->
   <section class="content">
@@ -82,7 +84,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Manage User</strong></h3>
+            <h3 class="box-title"><strong>Search Results</strong></h3>
           </div>
           <!-- /.box-header -->
           <div class="box-body">
@@ -91,10 +93,10 @@
                 <thead>
                 <tr>
                   <th>Email</th>
-                  <th>full_name</th>
-                  <th>register date</th>
-                  <th>number of reviews</th>
-                  <th>number of comment</th>
+                  <th>Full_name</th>
+                  <th>Register date</th>
+                  <th>Number of reviews</th>
+                  <th>Number of comments</th>
                   <th>Function</th>
                 </tr>
                 </thead>
