--- a/app/views/layouts/manage/home.html.erb
+++ b/app/views/layouts/manage/home.html.erb
@@ -13,12 +13,12 @@
 <div class="wrapper">
   <header class="main-header">
     <!-- Logo -->
-    <a href="../../index2.html" class="logo">
+    <%= link_to root_path, class: "logo" do %>
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>G</b>K</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>GemKeK</b></span>
-    </a>
+    <% end %>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
       <!-- Sidebar toggle button-->
