--- a/app/views/manage/games/_form.html.erb
+++ b/app/views/manage/games/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="modal-body">
      <div class="col-md-6">
         <div class="form-group">
-          <%= f.label :name, 'Your Name' %>
+          <%= f.label :name, 'Game Title' %>
           <%= f.text_field :name, class:"form-control"%>
         </div>
        
@@ -109,4 +109,4 @@
   };
 
 }).call(this);
- </script>>
+ </script>
