--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -71,12 +71,11 @@
   <section class="content">
     <!-- Small boxes (Stat box) -->
     <div class="row">
-      <div class="col-lg-4 col-xs-6">
+      <div class="col-lg-4 col-xs-6 col-md-offset-2">
         <!-- small box -->
         <div class="small-box bg-aqua">
           <div class="inner">
             <h3>10 Games</h3>
-
             <p>On Top Reviews</p>
           </div>
           <div class="icon">
