--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -48,6 +48,14 @@
               <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
           </li>
+          <li><%= link_to manage_genres_path do %>
+              <i class="fa fa-circle-o"></i> Manage Genre
+            <% end %>
+          </li>
+          <li><%= link_to manage_platforms_path do %>
+              <i class="fa fa-circle-o"></i> Manage Platform
+            <% end %>
+          </li>
         </ul>
       </li>
     </ul>
