--- a/app/assets/stylesheets/game_rate.scss
+++ b/app/assets/stylesheets/game_rate.scss
@@ -2,6 +2,12 @@
   line-height:28px;
   font-size:1.6em;
 }
+.star-rating-form {
+  line-height:28px;
+  font-size:1.6em;
+}
+
+.star-rating-form .fa-star{color: #F9A825;}
 
 .star-rating .fa-star{color: #F9A825;}
 
