--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -249,13 +249,13 @@
             <%= f.text_field :title, placeholder: @review.title, class: "form-control", required: "required" %>
           </div>
           <div class="form-group">
-            <div class="star-rating">
+            <div class="star-rating-form">
               <span class="fa fa-star-o" data-rating="1"></span>
               <span class="fa fa-star-o" data-rating="2"></span>
               <span class="fa fa-star-o" data-rating="3"></span>
               <span class="fa fa-star-o" data-rating="4"></span>
               <span class="fa fa-star-o" data-rating="5"></span>
-              <%= f.number_field :rating, class: "rating-value", type: "hidden", name: "" %>
+              <%= f.number_field :rating, class: "rating-value", type: "hidden" %>
             </div>
           </div>
           <%= hidden_field_tag :game_id, @game.id %>
