--- a/app/views/manage/games/index.html.erb
+++ b/app/views/manage/games/index.html.erb
@@ -37,6 +37,14 @@
               <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
           </li>
+          <li><%= link_to manage_genres_path do %>
+              <i class="fa fa-circle-o"></i> Manage Genre
+            <% end %>
+          </li>
+          <li><%= link_to manage_platforms_path do %>
+              <i class="fa fa-circle-o"></i> Manage Platform
+            <% end %>
+          </li>
         </ul>
       </li>
     </ul>
@@ -63,7 +71,7 @@
         <div class="box">
           <div class="box-header">
             <h3 class="box-title"><strong>GAME TABLE</strong></h3>
-            <%= link_to "#", class: "btn btn-success pull-right",
+            <%= link_to "", class: "btn btn-success pull-right",
                         data: {
                             toggle: "modal",
                             url: new_manage_game_path(),
