--- a/app/views/manage/platforms/index.html.erb
+++ b/app/views/manage/platforms/index.html.erb
@@ -6,10 +6,10 @@
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
-      <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+      <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
         <div class="input-group">
           <span class="input-group-btn">
-          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
+          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
             <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
         </span>
         </div>
@@ -21,7 +21,7 @@
           <span>Report</span>
 
         </li>
-      <% end %>
+        <% end %>
       </li>
       <li class="treeview active menu-open">
         <a href="#">
@@ -37,8 +37,8 @@
               <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
           </li>
-           <li><%= link_to manage_genres_path do %>
-              <i class="fa fa-circle-o"></i> Manage Genre
+          <li><%= link_to manage_platforms_path do %>
+              <i class="fa fa-circle-o"></i> Manage platform
             <% end %>
           </li>
           <li><%= link_to manage_platforms_path do %>
@@ -55,13 +55,13 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
 <!--    <h1>-->
-<!--    USER TABLE-->
+<!--      GAME TABLE-->
 <!--    </h1>-->
-<!--     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol> -->
+<!--    <ol class="breadcrumb">-->
+<!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+<!--      <li><a href="#">Tables</a></li>-->
+<!--      <li class="active">Data tables</li>-->
+<!--    </ol>-->
   </section>
 
   <!-- Main content -->
@@ -70,38 +70,53 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>USER TABLE</strong></h3>
+            <h3 class="box-title"><strong>GAME platform TABLE</strong></h3>
+            <%= link_to "", class: "btn btn-success pull-right",
+                        data: {
+                            toggle: "modal",
+                            url: new_manage_platform_path(),
+                            target: "#platform-form-edit"} do
+            %>
+              Add new
+            <% end %>
           </div>
+          <% flash.each do |key, value| %>
+            <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="user-table">
-              <table id="example1" class="table table-bordered table-striped">
-                <thead>
+            <table id="example1" class="table table-bordered table-striped">
+              <thead>
+              <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Action</th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @platforms.each do |platform| %>
                 <tr>
-                  <th>Email</th>
-                  <th>Full_name</th>
-                  <th>Register date</th>
-                  <th>Reviews</th>
-                  <th>Comments</th>
-                  <th>Function</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @user = User.all %>
-                <%= render "manage/users/users_list", users: @user %>
-                </tbody>
-                <!--                <tfoot>-->
-                <!--                  <tr>-->
-                <!--                    <th>Email</th>-->
-                <!--                    <th>full_name</th>-->
-                <!--                    <th>register date</th>-->
-                <!--                    <th>number of reviews</th>-->
-                <!--                    <th>number of comment</th>-->
-                <!--                    <th>Function</th>-->
-                <!--                  </tr>-->
-                <!--                </tfoot>-->
+                  <td><%= platform.id %></td>
+                  <td><%= platform.name %></td>
+                  <td>
+
+                      <%= link_to "#", class: "btn btn-info",
+                                  data: {
+                                      toggle: "modal",
+                                      url: edit_manage_platform_path(platform.id),
+                                      target: "#platform-form-edit"} do
+                      %>
+                        Edit
+                      <% end %>
+                      <%= link_to "Delete", manage_platform_path(platform), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'} %>
+                    </td>
+
+                    </tr>
+              <% end %>
+
+              </tfoot>
               </table>
-            </div>
           </div>
           <!-- /.box-body -->
         </div>
@@ -109,9 +124,13 @@
         <!-- /.box -->
       </div>
       <!-- /.col -->
+
+
     </div>
     <!-- /.row -->
   </section>
+
+
   <!-- /.content -->
 </div>
 
@@ -304,4 +323,7 @@
   </div>
 </aside>
 <div class="control-sidebar-bg"></div>
-
+<div id="platform-form-edit" class="modal fade">
+  <div class="modal-dialog modal-content">
+  </div>
+</div>
