--- a/app/views/manage/users/search_user.html.erb
+++ b/app/views/manage/users/search_user.html.erb
@@ -54,6 +54,10 @@
             <i class="fa fa-circle-o"></i> Manage User
             <% end %>
           </li>
+          <li><%= link_to manage_reviews_path do %>
+              <i class="fa fa-circle-o"></i> Manage Post
+            <% end %>
+          </li>
           <li><%= link_to manage_games_path do %>
             <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
