--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -157,7 +157,7 @@
                     <div class="col-md-12">
                       <div class="row">
                         <div class="col-md-1 picture-user">
-                    <img  <%= image_tag comment.user.avatar.url, height:50, width:50 %>
+                          <%= image_tag comment.user.avatar.url, height:50, width:50 %>
                         </div>
                         <div class="col-md-11">
                           <div class="col-md-12 user_review_space_top fix-pading-content">
