--- a/app/views/manage/games/index.html.erb
+++ b/app/views/manage/games/index.html.erb
@@ -33,6 +33,10 @@
               <i class="fa fa-circle-o"></i> Manage User
             <% end %>
           </li>
+          <li><%= link_to manage_reviews_path do %>
+              <i class="fa fa-circle-o"></i> Manage Review
+            <% end %>
+          </li>
           <li><%= link_to manage_games_path do %>
               <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
