--- a/app/views/manage/games/search_game.html.erb
+++ b/app/views/manage/games/search_game.html.erb
@@ -43,6 +43,10 @@
               <i class="fa fa-circle-o"></i> Manage User
             <% end %>
           </li>
+          <li><%= link_to manage_reviews_path do %>
+              <i class="fa fa-circle-o"></i> Manage Review
+            <% end %>
+          </li>
           <li class="active"><%= link_to manage_games_path do %>
               <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
