--- a/app/views/manage/reviews/index.html.erb
+++ b/app/views/manage/reviews/index.html.erb
@@ -6,10 +6,10 @@
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
-      <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+      <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
         <div class="input-group">
           <span class="input-group-btn">
-          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
+          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
             <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
         </span>
         </div>
@@ -41,7 +41,7 @@
               <i class="fa fa-circle-o"></i> Manage Game
             <% end %>
           </li>
-           <li><%= link_to manage_genres_path do %>
+          <li><%= link_to manage_genres_path do %>
               <i class="fa fa-circle-o"></i> Manage Genre
             <% end %>
           </li>
@@ -58,14 +58,14 @@
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
-<!--    <h1>-->
-<!--    USER TABLE-->
-<!--    </h1>-->
-<!--     <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
-    </ol> -->
+    <!--    <h1>-->
+    <!--      GAME TABLE-->
+    <!--    </h1>-->
+    <!--    <ol class="breadcrumb">-->
+    <!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+    <!--      <li><a href="#">Tables</a></li>-->
+    <!--      <li class="active">Data tables</li>-->
+    <!--    </ol>-->
   </section>
 
   <!-- Main content -->
@@ -74,38 +74,52 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>USER TABLE</strong></h3>
+            <h3 class="box-title"><strong>REVIEW TABLE</strong></h3>
           </div>
+          <% flash.each do |key, value| %>
+            <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+
           <!-- /.box-header -->
           <div class="box-body">
-            <div id="user-table">
-              <table id="example1" class="table table-bordered table-striped">
-                <thead>
+            <table id="example1" class="table table-bordered table-striped">
+              <thead>
+              <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Created At</th>
+                <th>Action</th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @reviews.each do |review| %>
                 <tr>
-                  <th>Email</th>
-                  <th>Full_name</th>
-                  <th>Register date</th>
-                  <th>Reviews</th>
-                  <th>Comments</th>
-                  <th>Function</th>
+                  <td><%= review.id %></td>
+                  <td>
+                    <%= link_to review_path(id: review.id), method: :get do %>
+                      <% if review.title != nil %>
+                        <%= review.title %>
+                      <% else %>
+                        No title
+                      <% end %>
+                    <% end %>
+                  </td>
+                  <td>
+                    <%= link_to user_profile_home_path(id: review.user.id) do %>
+                      <%= review.user.full_name %>
+                    <% end %>
+                  </td>
+                  <td><%= review.created_at.to_date() %></td>
+                  <td>
+                    <%= link_to "Delete", manage_review_path(id: review.id), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'} %>
+                  </td>
+
                 </tr>
-                </thead>
-                <tbody>
-                <% @user = User.all %>
-                <%= render "manage/users/users_list", users: @user %>
-                </tbody>
-                <!--                <tfoot>-->
-                <!--                  <tr>-->
-                <!--                    <th>Email</th>-->
-                <!--                    <th>full_name</th>-->
-                <!--                    <th>register date</th>-->
-                <!--                    <th>number of reviews</th>-->
-                <!--                    <th>number of comment</th>-->
-                <!--                    <th>Function</th>-->
-                <!--                  </tr>-->
-                <!--                </tfoot>-->
+              <% end %>
+
+              </tfoot>
               </table>
-            </div>
           </div>
           <!-- /.box-body -->
         </div>
@@ -113,9 +127,13 @@
         <!-- /.box -->
       </div>
       <!-- /.col -->
+
+
     </div>
     <!-- /.row -->
   </section>
+
+
   <!-- /.content -->
 </div>
 
@@ -308,4 +326,7 @@
   </div>
 </aside>
 <div class="control-sidebar-bg"></div>
-
+<div id="game-form-edit" class="modal fade">
+  <div class="modal-dialog modal-content">
+  </div>
+</div>
