--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -103,7 +103,7 @@ hr {
   margin: 9px 20px 0 20px;
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
-  color: #ce2a36;
+  color: #b8b9ad !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   color: #ce2a36 !important;
@@ -243,6 +243,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   background: #fff;
   border-right: 0;
   box-shadow: 0 0 50px rgba(0,0,0,0.06);
+  height:225px !important;
 }
 #about p {
   line-height: 24px;
@@ -606,4 +607,13 @@ label {
 
 #bs-example-navbar-collapse-1  {
   margin-left:0px !important;
+}
+
+
+.content-game-home-page a:hover {
+  color:red !important;
+}
+
+.list-related-game a:hover {
+  color:red !important;
 }
