--- a/app/views/manage/platforms/index.html.erb
+++ b/app/views/manage/platforms/index.html.erb
@@ -6,14 +6,14 @@
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MAIN NAVIGATION</li>
-      <%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
+      <!--<%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
         <div class="input-group">
           <span class="input-group-btn">
           <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
             <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
         </span>
         </div>
-      <% end %>
+      <% end %>-->
       <li>
         <%= link_to manage_path do %>
         <li class="active">
